--- a/Clase2_Proyecto2/proyecto2/bicicletas/templates/formulario.html
+++ b/Clase2_Proyecto2/proyecto2/bicicletas/templates/formulario.html
@@ -54,9 +54,13 @@
                     </td> 
                 </tr>
                 <tr>
-                    <t
+                <tr>
+                    <th colspan='2'>
+                        <input type="submit" name="btnenv" value="Enviar">
+                        <input type="reset" name="btres" value="Restablecer">
+                    </th>
                 </tr>          
-            </br><a href='/'>Volver al formulario</a>
+                
             </table>
         </form>
     </body>
